# embedded

./: .embedded_env  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  IFLOW.MD  PLAN.md  PROJECT_IDEAS.md  README.md  WSL2_STLink_USBIPD_OpenOCD.md  embedded_bookmarks.html
.claude/: hookify.skill-frontmatter-check.local.md  hookify.use-skill-creator.local.md
.skills/: stm32-flash.md
mcs51/: README.md
mcs51/at89s52_blink_sdcc/: Makefile  README.md
mcs51/at89s52_blink_sdcc/src/: main.c
plc/: AGENTS.md
plc/.claude/: settings.local.json
plc/308模拟量控制/: 308过程控制.xlsx  308过程控制_PLC_IO表.md  308过程控制_接线图.drawio  电器元件清单.md
plc/abb考试/: ABB机器人发送当前位置坐标给PLC-林木森Lmsa-微信公众号-2025-12-19.markdown  PLC_Axis6_Stream.mod  S7-1200_触摸屏_ABB6轴实时显示_操作步骤与RAPID程序.md
plc/zhou/: 1500 伺服设备映射表.md  1500.docx  AGENTS.md
plc/zhou/.claude/: settings.local.json
plc/zhou/pythonconnent/: draw_taiji.py
plc/zhou/pythonconnent/.claude/: settings.local.json
plc/zhou/pythonconnent/仿真/: AGENTS.md  QUICKSTART.md  README.md  USAGE.md  config.yaml  demo_advanced_curves.py  exam_trajectory.py  main.py  pixel_art_trajectory.py  requirements.txt  simulator.py
plc/zhou/pythonconnent/最简单的画圆通讯加测试/: DB200_Traj.scl  FB_PythonFollow.scl  README.md  gen_circle_300.py  run.py  test_conn.py  test_one_point.py  代码原理解释.md  通讯架构图.md
plc/zhou/pythonconnent/素材/: QUICKSTART_高端曲线.md  README_turtle绘图集合.md  README_项目架构与安全清单.md  README_高端数学曲线库.md  draw_dragon_curve.py  draw_hilbert_curve.py  draw_ironman.py  draw_spiral_art.py  draw_taiji.py  pixelnoir-analysis-1765039231420.json  pixelnoir-analysis-1765039941300.json  pixelnoir-coords-1764955210951.json  pixelnoir-coords-1764955412510.json  pixelnoir-coords-1764955564631.json  pixelnoir-coords-1764955615226.json  pixelnoir_grid_1765041178878.py  pixelnoir_plot_1764956025622.py  正点位.md  考试.scl  (+4 more)
plc/zhou/钻孔单流程控制/: TIA_Portal操作流程_MC库版.md  最终版本_MC库版.scl
plc/转盘伺服/: IO映射表.md  PLC变量表.xlsx  流程图.md  转盘最终版.scl  转盘状态机重写版.scl
skills/wsl2-usbipd-stm32/: SKILL.md
stm32/: AGENTS.md
stm32/docs/: 00_Prerequisites.md  02_Common_Library_Functions.cpp  04_GPIO_Advanced_Notes.md  05_Learning_Progress.md  Hardware_I2C_Flow.drawio  timer_explained.drawio
stm32/docs/concepts/: 01_C_Language_Foundations.md  02_GPIO_Internal_Architecture.md  03_GPIO_Coding_Practices.md  04_Timer_Basics.md  05_PWM_Complete.md  06_GPIO_Pins_Complete.md  07_APB_Bus_and_Pin_Mapping.md  08_Timer_Measurement_Dimensions.md  README.md
stm32/docs/小车/: LineFollower.cpp  README.md  SmoothControl.cpp
stm32/learning/: COURSE_BUILD_PLAN.md  学习指引.md
stm32/learning/2-1 STM32工程模板/: Project.uvguix.11614  Project.uvoptx  Project.uvprojx
stm32/learning/3-1 LED闪烁/: Project.uvguix.11614
stm32/learning/3-2 led流水灯/: Project.uvguix.11614  Project.uvoptx  Project.uvprojx
stm32/learning/3-3 蜂鸣器/: Project.uvguix.11614
stm32/learning/learning/: QUICKSTART.md  README.md
stm32/learning/lesson_10-1/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_10-2/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_10-2/boards/stm32f103c8t6/: STM32F103C8Tx_FLASH.ld
stm32/learning/lesson_10-2/include/: MPU6050.h
stm32/learning/lesson_10-2/src/: MPU6050.c  main.c
stm32/learning/lesson_11-1/: .gitignore  CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_11-2/: CLAUDE.md  CMakeLists.txt  IFLOW.md
stm32/learning/lesson_12-1/: CMakeLists.txt
stm32/learning/lesson_12-2/: CMakeLists.txt
stm32/learning/lesson_13-1/: CMakeLists.txt
stm32/learning/lesson_13-2/: CMakeLists.txt
stm32/learning/lesson_13-3/: CMakeLists.txt
stm32/learning/lesson_13-4/: CMakeLists.txt
stm32/learning/lesson_14-1/: CMakeLists.txt
stm32/learning/lesson_14-2/: CMakeLists.txt
stm32/learning/lesson_15-1/: CMakeLists.txt
stm32/learning/lesson_15-2/: CMakeLists.txt
stm32/learning/lesson_3-1/: .gitignore  CMakeLists.txt
stm32/learning/lesson_3-3/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_5-1/: CMakeLists.txt
stm32/learning/lesson_5-1/src/: main.c
stm32/learning/lesson_5-2/: CLAUDE.md  CMakeLists.txt  IFLOW.md
stm32/learning/lesson_6-1/: CMakeLists.txt
stm32/learning/lesson_6-2/: CMakeLists.txt
stm32/learning/lesson_6-3/: CMakeLists.txt
stm32/learning/lesson_6-4/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_6-5/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_6-6/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_6-7/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_6-8/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_7-1/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_7-2/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_8-1/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_8-2/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_8-2/src/: AD.c  main_dma.c
stm32/learning/lesson_9-1/: CLAUDE.md
stm32/learning/lesson_9-2/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_9-3/: CLAUDE.md  CMakeLists.txt
stm32/learning/lesson_9-4/: CLAUDE.md  CMakeLists.txt
stm32/learning/prompt/: AI_STUDIO_QUICK_PROMPT.md  AI_STUDIO_STM32_PRODUCT_DESIGN.md
stm32/learning/vscode_cmake_template/: CMakeLists.txt
stm32/learning/嵌入式相关/: LED闪烁.cpp  输入输出模式.mk
stm32/projects/course_capstone/: CMakeLists.txt  README.md
stm32/projects/course_capstone/boards/stm32f103c8t6/: STM32F103C8Tx_FLASH.ld
stm32/projects/course_capstone/include/: ADC_Audio.h  ADC_DMA.h  Buzzer.h  CountSensor.h  Delay.h  Encoder_TIM.h  Key.h  MPU6050.h  MPU6050_Reg.h  Motor.h  MyFLASH.h  MyRTC.h  MySPI.h  OLED.h  OLED_Font.h  PID.h  PWM_TIM2.h  Serial.h  Servo.h  Store.h  W25Q64.h  W25Q64_Ins.h  Watchdog.h
stm32/projects/course_capstone/src/: ADC_Audio.c  ADC_DMA.c  Buzzer.c  CountSensor.c  Delay.c  Encoder_TIM.c  Key.c  MPU6050.c  Motor.c  MyFLASH.c  MyRTC.c  MySPI.c  OLED.c  OLED_Font.c  PID.c  PWM_TIM2.c  Serial.c  Servo.c  Store.c  W25Q64.c  Watchdog.c  main.c  main_balance_ball.c  main_bluetooth_car.c  main_data_logger.c  main_gesture_arm.c  main_habit_tracker.c  main_inclinometer.c  main_low_power_sentry.c  main_motor_pid_tuner.c  main_music_light.c  main_pomodoro.c  main_self_test.c  main_smart_home_gateway.c  main_spectrum_oled.c
(+201 files in other folders)
